# auto_trader

./: .apm.lock.yaml  .backbone-settings.json  .gitignore  README.md  _create_files.py  _wave_create.py  execute_cli.ps1  hook-config.json  main.py  pyproject.toml
.backbone/presence/: thomas.labbe@soprasteria.com.json
.github/hooks/: audit-trace.jsonl  hooks.json
auto_trader/: __init__.py  cli.py  main.py  pyproject.toml
auto_trader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
auto_trader/.github/: .gitignore
auto_trader/core/: config.py  exceptions.py  logging.py
auto_trader/db/: connection.py  migrate.py  repository.py
auto_trader/dividends/: __init__.py  models.py  pipeline.py  repository.py
auto_trader/indicators/: engine.py  repository.py
auto_trader/instruments/: __init__.py  importer.py  models.py  repository.py  seed.py
auto_trader/interday/: __init__.py  models.py  pipeline.py  repository.py
auto_trader/intraday/: __init__.py  models.py  pipeline.py  repository.py
auto_trader/signals/: __init__.py  engine.py  models.py  repository.py
auto_trader/sync/: __init__.py  journal.py  journal_repository.py  orchestrator.py
auto_trader/web/: __init__.py  app.py
inputs/: Liste_PEA.csv  overview.md  sample.md
outputs/: workflow-state-quality-validation-auto-trader-phase1.md
outputs/runs/: run-manifest.json
outputs/specs/: constitution.md
tests/: test_main.py
tests/acceptance/: test_ca01.py  test_ca02.py  test_ca03.py  test_ca05.py  test_ca08.py  test_ct01.py  test_ct02.py  test_ct03.py  test_ct05_full.py  test_ct05_interday.py  (+6 more)
(+91 files in other folders)
